--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-05-20
+% \update      2016-06-13
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -132,6 +132,24 @@
    Seq24 Team.
    \emph{The home site for the Sequencer64 looping sequencer.}
    \url{https://launchpad.net/seq24}
+   2016.
+
+   \bibitem{seq32}
+   Stan Preston (stazed).
+   \emph{The home site for the Seq32 looping sequencer.}
+   \url{https://github.com/Stazed/seq32}
+   2016.
+
+   \bibitem{seq42}
+   sbrauer.
+   \emph{The home site for the original Seq42 looping sequencer.}
+   \url{https://github.com/sbrauer/seq42}
+   2016.
+
+   \bibitem{seq42fork}
+   Stan Preston (stazed).
+   \emph{A fork of the Seq42 looping sequencer.}
+   \url{https://github.com/Stazed/seq42}
    2016.
 
    \bibitem{sequencer64}
