--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -215,6 +215,25 @@
    "piano roll" of the song editor. Here, we zero in on its many
    features.
 
+   Keystrokes and additional mouse configuration have been added to make
+   editing easier even without a good mouse.
+   For example, one can page up and down vertically in the arrangement
+   panel using the
+   \index{keys!page-up} Page Up and 
+   \index{keys!page-down} Page Down keys.
+   One can go to the top using the 
+   \index{keys!home} Home key,
+   to the bottom using the
+   \index{keys!end} End key.
+   One can page left and right horizontally in the arrangement
+   panel using the
+   \index{keys!shift-page-up} Shift Page Up and 
+   \index{keys!shift-page-down} Shift Page Down keys.
+   One can go to the leftmost position using the 
+   \index{keys!shift-home} Home key,
+   and to the rightmost position using the
+   \index{keys!shift-end} End key,
+
    The following figure is taken from a conventional MIDI file, imported,
    with a few long tracks, rather than a large number of smaller patterns.
    In other words, the patterns used here are very long, and used only once
@@ -367,7 +386,7 @@
          \index{song editor!handle}
          \index{song editor!section length}
          Looking closely at the diagram where the arrows point, small
-         squares in the corner of the patterns can be seen.  By grabbing
+         squares in two corners of the patterns can be seen.  By grabbing
          that square with a left-click, the square can be moved horizontally
          to either lengthen or shorted the pattern or pattern subsection, if
          there is room to move in the desired direction.
