--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-05-20
+% \update      2016-05-22
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -423,7 +423,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{menu/menu_file_options_keyboard.png}
+%  \includegraphics[scale=0.75]{menu/menu_file_options_keyboard.png}
+   \includegraphics[scale=0.75]{menu/menu_file_options_keyboard-0_9_12.png}
    \caption{File / Options / Keyboard}
    \label{fig:seq64_menu_file_options_keyboard}
 \end{figure}
@@ -450,14 +451,30 @@
    The pause feature can be removed by rebuilding the application
    after configuring with the \texttt{--disable-pause} option.
 
+   \textbf{New:}
+   \index{new!pattern edit}
+   \index{pattern edit}
+   \index{new!event edit}
+   \index{event edit}
+   With version 0.9.12, we add a new feature as we try to achieve the goal of
+   being able to edit a pattern using only the keyboard.
+   \textsl{Sequencer64} now supports two modifier keys.
+   The first modifier key causes the usual pattern-toggle key (hot-key) for a
+   given slot to instead bring up the pattern editor.  By default, this key is
+   the equals ("=") key.  The second modifier key causes the usual
+   pattern-toggle key (hot-key) for a given slot to instead bring up the event
+   editor.  By default, this key is the minus ("-") key.  As with the other
+   keys, these keys can be reconfigured to a different set of keys in the
+   \textbf{File / Options / Keyboard} page.
+
    To continue with a listing of the keyboard options:
 
    \begin{enumber}
-      \item \textbf{Show key labels on sequences}
+      \item \textbf{Show sequence hot-key labels on sequences}
       \item \textbf{Show sequence numbers on sequences}
-      \item \textbf{Control keys}
-      \item \textbf{Sequence toggle keys}
-      \item \textbf{Mute-group slots}
+      \item \textbf{Control keys [keyboard-group]}
+      \item \textbf{Sequence toggle keys [keyboard-control]}
+      \item \textbf{Mute-group slots [mute-group]}
       \item \textbf{Learn}
       \item \textbf{Disable}
       \item \textbf{Enable}
