Added some links to YouTube videos about Sequencer64.

--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-05-22
+% \update      2016-06-15
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -230,6 +230,8 @@
          \textbf{Ctrl Left Click}.
          Pressing the \texttt{Ctrl} key and the left button on a note or an
          unselected event \textsl{adds} that event to the selection.
+         This is a bit different from conventional selection addition
+         in other applications, which is initiated via the \texttt{Shift} key.
       \item \index{mouse!left-click-drag}
          \textbf{Left Click Drag}.
          Pressing the left mouse button and dragging also lets one
@@ -938,6 +940,15 @@
    pointer to see where to paste the events.  An orange box representing the
    selected-and-copied notes appears, and the user should move the box (note)
    to the desired location and then left-click.
+
+   Additionally, one can move the orange box using the arrow keys, to the
+   desired location, and then hit the
+   \index{keys!enter} \texttt{Enter} key to
+   drop the notes at that location.
+
+   Finally, note that selected notes that are cut or copied can then be
+   pasted into \textsl{other} pattern editor dialogs; that is, they can be
+   pasted into other sequences.
 
 \begin{figure}[H]
    \centering 
