--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -133,6 +133,7 @@
       \item muranyia: feature request for numbered piano keys and bug-reports.
       \item F0rth: a request for scripting support, a possible future feature.
       \item triss: a request for OSC support, a possible future feature.
+      \item ssj71: a request for an LV2 plugin version, a possible future feature.
    \end{itemize}
 
 \subsection{Sequencer64: What?}
